# segment-fql-python

./: .gitignore  README.md  pyproject.toml
segment_fql/: lexer.py
segment_fql/lexer/: __init__.py  lexer.py  token.py  token_type.py
segment_fql/parser/: __init__.py  ast_node.py  ast_type.py  parser.py
tests/: test_lexer.py  test_parser.py
