[project]
name = "segment-fql-python"
version = "0.0.1"
authors = [
  { name="Leonel Sanches da Silva", email="leonel.sanches@segment.io" },
]
description = "Segment FQL Tools for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/seg-leonelsanches/segment-fql-python"
Issues = "https://github.com/seg-leonelsanches/segment-fql-python/issues"